<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    <EditText
        android:id="@+id/secondView_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/secondView_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/secondView_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/secondView_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/secondView_textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/secondView_textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="false"
            />
    </LinearLayout>
</LinearLayout>